--- a/mods/fusion-connected-textures.pw.toml
+++ b/mods/fusion-connected-textures.pw.toml
@@ -1,6 +1,6 @@
 name = "Fusion (Connected Textures)"
 filename = "fusion-1.0.6-fabric-mc1.20.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/p19vrgc2/versions/tE50UtoY/fusion-1.0.6-fabric-mc1.20.jar"
