--- a/index.toml
+++ b/index.toml
@@ -721,6 +721,10 @@ file = "mods/overweight-farming.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/owo-lib.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/physicsmod.pw.toml"
 metafile = true
 
