Add travelers Titles

--- a/index.toml
+++ b/index.toml
@@ -230,6 +230,10 @@ file = "mods/spark.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/travelers-titles.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/trinkets.pw.toml"
 metafile = true
 
