--- a/index.toml
+++ b/index.toml
@@ -30,6 +30,10 @@ file = "mods/better-stats.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/better-village-fabric.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/betterend.pw.toml"
 metafile = true
 
@@ -151,6 +155,10 @@ metafile = true
 
 [[files]]
 file = "mods/konkrete.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/library-ferret-fabric.pw.toml"
 metafile = true
 
 [[files]]
