--- a/pack.toml
+++ b/pack.toml
@@ -12,5 +12,5 @@ fabric = "0.14.23"
 minecraft = "1.20.1"
 
 [options]
-datapack-folder = "config/openloader/data"
+datapack-folder = "config/paxi/datapacks"
 no-internal-hashes = true
