Add more small mods

--- a/index.toml
+++ b/index.toml
@@ -19,9 +19,6 @@ file = "config/paxi/resourcepacks/advancement-plaques-with-vines.pw.toml"
 metafile = true
 
 [[files]]
-file = "modlist.md"
-
-[[files]]
 file = "mods/advancement-plaques.pw.toml"
 metafile = true
 
@@ -94,7 +91,15 @@ file = "mods/cloth-config.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/clumps.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/collective.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/connectible_chains.pw.toml"
 metafile = true
 
 [[files]]
@@ -139,6 +144,10 @@ metafile = true
 
 [[files]]
 file = "mods/fancymenu.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/ferrite-core.pw.toml"
 metafile = true
 
 [[files]]
