Added chunks fade in

--- a/index.toml
+++ b/index.toml
@@ -91,6 +91,10 @@ file = "mods/chat-heads.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/chunks-fade-in.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/chunky.pw.toml"
 metafile = true
 
