--- a/index.toml
+++ b/index.toml
@@ -163,6 +163,14 @@ file = "mods/do-a-barrel-roll.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/easy-anvils.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/easy-magic.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/fabric-api.pw.toml"
 metafile = true
 
