--- a/index.toml
+++ b/index.toml
@@ -243,6 +243,10 @@ file = "mods/krypton.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/lambdabettergrass.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/library-ferret-fabric.pw.toml"
 metafile = true
 
