--- a/mods/fancymenu.pw.toml
+++ b/mods/fancymenu.pw.toml
@@ -1,13 +1,13 @@
 name = "FancyMenu"
-filename = "fancymenu_fabric_2.14.10_MC_1.20.1.jar"
+filename = "fancymenu_fabric_2.14.10-2_MC_1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wq5SjeWM/versions/nBoQsa3C/fancymenu_fabric_2.14.10_MC_1.20.1.jar"
+url = "https://cdn.modrinth.com/data/Wq5SjeWM/versions/Bil39jzv/fancymenu_fabric_2.14.10-2_MC_1.20.1.jar"
 hash-format = "sha1"
-hash = "9536946c2ffd02811dcbbb68b8468f1643811412"
+hash = "091894325843a01df46df4f135357f40f99ab1e8"
 
 [update]
 [update.modrinth]
 mod-id = "Wq5SjeWM"
-version = "nBoQsa3C"
+version = "Bil39jzv"
