--- a/mods/sleep-tight.pw.toml
+++ b/mods/sleep-tight.pw.toml
@@ -1,13 +1,13 @@
 name = "Sleep Tight"
-filename = "sleep_tight-1.20-1.1.6-fabric.jar"
+filename = "sleep_tight-1.20-1.1.7-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/tNai0h2Y/versions/cBS0eOt9/sleep_tight-1.20-1.1.6-fabric.jar"
+url = "https://cdn.modrinth.com/data/tNai0h2Y/versions/RvGhV3Ff/sleep_tight-1.20-1.1.7-fabric.jar"
 hash-format = "sha1"
-hash = "7b94dfc48e8c7174bf82de3990e8d50ce8fc5905"
+hash = "648b488b42a5abe2a602671a653a18f1a05b1f03"
 
 [update]
 [update.modrinth]
 mod-id = "tNai0h2Y"
-version = "cBS0eOt9"
+version = "RvGhV3Ff"
