--- a/index.toml
+++ b/index.toml
@@ -100,6 +100,10 @@ file = "mods/bushier-flowers.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/carpeted-stairs.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/cc-tweaked.pw.toml"
 metafile = true
 
